# bot-pilot-landing

./: .git-blame-ignore-revs  .gitignore  .pnp.cjs  .yarnrc.yml  README.md  index.html  package.json  vite.config.js
.github/workflows/: build.yml
bot-pilot-crypto/: pom.xml
bot-pilot-crypto-bom/: pom.xml
bot-pilot-crypto-runner/: pom.xml
bot-pilot-crypto/bot-pilot-crypto-api/: pom.xml
bot-pilot-crypto/bot-pilot-crypto-application/: pom.xml
bot-pilot-crypto/bot-pilot-crypto-domain/: pom.xml
bot-pilot-crypto/bot-pilot-crypto-infrastructure/: pom.xml
bot-pilot-crypto/bot-pilot-crypto-runner/: pom.xml
contact-form-mail/: .gitignore  CLAUDE.md  pom.xml
contact-form-mail/contact-form-crypto/: pom.xml
contact-form-mail/contact-form-mail-application/: pom.xml
contact-form-mail/contact-form-mail-bootstrap/: pom.xml
contact-form-mail/contact-form-mail-domain/: pom.xml
contact-form-mail/contact-form-mail-infrastructure/: pom.xml
contact-form-mail/contact-form-mail-integrationtests/: pom.xml
contact-form-mail/contact-form-mail-web/: pom.xml
deployment/: Caddyfile
deployment/dev/: docker-compose.yml
frontend/: .dockerignore  .pnp.cjs  .prettierignore  .yarnrc.yml  index.html  package.json  prettier.config.js  tsconfig.json  vite.config.js
mail-service/: .dockerignore  .flake8  .gitignore  Makefile  logging.yaml  pyproject.toml
mail-service/deployment/dev/: Containerfile
mail-service/deployment/prod/: Containerfile
mail-service/mail_service_contact_form/: email_service.py  main.py  models.py
src/: App.jsx  App.tsx  main.tsx
(+223 files in other folders)
