[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mail-service-contact-form"
version = "0.1.0"
description = "FastAPI backend for contact form with email delivery"
authors = ["Norman-Ian Böttcher norman.boettcher@web.de"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

# --- Web API ---
fastapi = "0.115.5"
uvicorn = { version = "0.30.6", extras = ["standard"] }

# --- Email ---
aiosmtplib = "3.0.2"
email-validator = "2.2.0"

# --- Config ---
python-dotenv = "1.0.1"

# --- Security / Utils ---
pydantic = "2.10.3"
pydantic-core = "2.27.1"

[tool.poetry.group.dev.dependencies]
# --- Formatting ---
black = "24.10.0"

# --- Linting ---
flake8 = "7.1.1"

# --- Testing ---
pytest = "8.3.4"
pytest-asyncio = "0.24.0"

# --- Typing / DX ---
types-python-dateutil = "2.9.0.20241003"

# -------------------------------------------------
# Tooling configuration
# -------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py313"]
skip-string-normalization = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
